fix: invisible text when searching in the map interface

--- a/src/css/Statistics.css
+++ b/src/css/Statistics.css
@@ -31,3 +31,20 @@
     backdrop-filter: saturate(180%) blur(20px);
     opacity: 0.7;
 }
+.ant-select-selection-search{
+    color:#ffffff
+}
+.ant-select-dropdown{
+    backdrop-filter: saturate(180%) blur(20px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color:#fff;
+}
+.ant-select-item-option {
+    display: -ms-flexbox;
+    background:none;
+    display: flex;
+    color: white;
+}
+.ant-select-item-option-active:not(.ant-select-item-option-disabled):not(.ant-select-item-option-selected) {
+    background-color: #00000013;
+}
